# demo

./: .gitignore  pyproject.toml
payments/: settings.py  urls.py
stripe_shop/: admin.py  forms.py  managers.py  models.py
stripe_shop/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_alter_customuser_managers.py
